# words-learning-service

./: .gitignore  BACKEND_PROMPT.md  download_ecdict.py  pyproject.toml  requirements.txt  test_google_rich.py
app/: bing_service.py  database.py  dictionary_service.py  ecdict_service.py  gemini_service.py  llm_service.py  main.py  models.py  prompts.py
app/api/: settings.py  translate.py  words.py
test/: translator.py
